//T00200043
//This is the Adaptee Class

public class RCASignal {

    public void RCAOut() {
        System.out.println("Outputting Stereo Sound + Video Signals");
    }

}