//T00200043
//This is the Target Interface

public interface SignalInterface {

    void SignalOut();

}
