@startuml
'https://plantuml.com/class-diagram
skinparam classAttributeIconSize 0

interface SignalInterface {
    + SignalOut()
}

class RCASignal {
    + RCAOut()
}

class HdmiSignal {
    + SignalOut()
}

SignalInterface <|.. HdmiSignal
RCASignal *-- HdmiSignal

note left of RCASignal : Adaptee Class
note right of HdmiSignal : Adapter Class
note top of SignalInterface : Target Interface

@enduml